Ensure text is readable

--- a/tests/styles.css
+++ b/tests/styles.css
@@ -22,6 +22,10 @@ a {
     }
 }
 
+p {
+    max-width: 80ch;
+}
+
 
 .test-case {
 }
